# dict

./: CMakeLists.txt
include/: CMakeLists.txt  dict.h
include/dict/: dict.h
src/: CMakeLists.txt  dict.c
test/: CMakeLists.txt  test.c
